--- a/css/style.less
+++ b/css/style.less
@@ -44,7 +44,7 @@
 }
 
 .col-7 .sxdl dd {
-    width: auto;
+    width: 560px;
 }
 
 .row {
@@ -1156,8 +1156,73 @@ body#index-body div.con {
 }
 .borb { padding-bottom: 6px; }
 
+.sxdl dd .fit {
+    width: 60px;
+}
 
 
+/* account page */
+.new-rzzt {
+
+    margin-top: 24px;
+
+    .item {
+        display: block;
+        float: left;
+        width: 64px;
+        text-align: center;
+        color: #999;
+
+        i {
+            display: block;
+            width: 48px;
+            height: 48px;
+            margin: 0 auto;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    }
+
+    .certify {
+        i {
+            background-image: url(../images/certify.png);
+        }
+    }    .phone {
+        i {
+            background-image: url(../images/phone.png);
+        }
+    }    .email {
+        i {
+            background-image: url(../images/email.png);
+        }
+    }    .card {
+        i {
+            background-image: url(../images/card.png);
+        }
+    }
+
+    .un {
+        color: #08c;
+
+        &.certify {
+            i {
+                background-image: url(../images/un-certify.png);
+            }
+        }    &.phone {
+            i {
+                background-image: url(../images/un-phone.png);
+            }
+        }    &.email {
+            i {
+                background-image: url(../images/un-email.png);
+            }
+        }    &.card {
+            i {
+                background-image: url(../images/un-card.png);
+            }
+        }
+    }
+}
 
 
 
