--- a/css/style.less
+++ b/css/style.less
@@ -208,7 +208,12 @@ input[type="submit"].btn, input[type="button"].btn {
         width: 646px - @col-padding * 1.5;
 
         .col-xs-4 {
-            width: 169px;
+            width: 199px;
+
+            dd {
+                float: left;
+                width: 199px;
+            }
         }
     }
 }
