--- a/css/style.less
+++ b/css/style.less
@@ -1229,7 +1229,12 @@ body#index-body div.con {
     }
 }
 
-
+.gonggao {
+  padding: 12px 20px;
+}
+.gonggao .more {
+  right:40px;
+}
 
 
 /* ZJL's style */
