page of security

--- a/css/style.css
+++ b/css/style.css
@@ -1425,6 +1425,7 @@ p.loan-apply-con {
 .row .col-xs-4,
 .row .col-xs-5,
 .row .col-xs-6,
+.row .col-xs-7,
 .row .col-xs-8,
 .row .col-xs-9,
 .row .col-xs-10,
@@ -1699,7 +1700,7 @@ input[type="button"].btn.big {
   height: 6px;
   cursor: pointer;
 }
-.left_ul li i.open {
+.left_ul li.open i {
   background: url(../images/arrow-open.png) no-repeat;
 }
 .left_ul li ol {
@@ -2370,7 +2371,7 @@ body#index-body div.con {
   color: white;
 }
 .security-con h2.security-title-1 {
-  background: url(../images/security-titlebg-1.png) no-repeat scroll left 0;
+  background: url(../images/security-s-01.jpg) no-repeat scroll left 0;
 }
 .security-con h2.security-title-1 span {
   padding: 0 50px 0 40px;
@@ -2409,6 +2410,97 @@ body#index-body div.con {
 }
 .sxdl dd .fit {
   width: 60px;
+}
+/* security */
+.security-con.con {
+  padding: 39px 86px;
+  width: 928px;
+  color: #666;
+}
+.security-con.con .security-s {
+  height: 59px;
+  color: #f4f4f4;
+  line-height: 59px;
+  font-size: 28px;
+  padding-left: 24px;
+}
+.security-con.con .security-s strong {
+  color: #fff;
+}
+.security-con.con .security-s-1 {
+  background: url(../images/security-s-01.jpg) no-repeat;
+}
+.security-con.con .security-s-3 {
+  background: url(../images/security-s-03.jpg) no-repeat;
+}
+.security-con.con .security-s-5 {
+  background: url(../images/security-s-05.jpg) no-repeat;
+}
+.security-con.con .security-s-2 {
+  background: url(../images/security-s-02.jpg) no-repeat right center;
+  text-align: right;
+  padding-left: 0;
+  padding-right: 24px;
+}
+.security-con.con .security-s-4 {
+  background: url(../images/security-s-04.jpg) no-repeat right center;
+  text-align: right;
+  padding-left: 0;
+  padding-right: 24px;
+}
+.security-con.con .security-img-1 {
+  background: url(../images/security01.jpg) no-repeat center center;
+  width: 366px;
+  height: 279px;
+}
+.security-con.con .security-img-2 {
+  background: url(../images/security02.jpg) no-repeat center center;
+  width: 366px;
+  height: 279px;
+}
+.security-con.con .security-img-3 {
+  background: url(../images/security03.jpg) no-repeat center 60px;
+  height: 356px;
+}
+.security-con.con .security-img-4 {
+  background: url(../images/security04.jpg) no-repeat center center;
+  height: 356px;
+}
+.security-con.con .security-img-5 {
+  background: url(../images/security05.jpg) no-repeat center center;
+  height: 356px;
+}
+.security-con.con .star-line {
+  width: 928px;
+  position: relative;
+  margin-top: 24px;
+  height: 18px;
+}
+.security-con.con .star-line .line {
+  width: 849px;
+  height: 1px;
+  background: #ccc;
+  position: absolute;
+  top: 9px;
+}
+.security-con.con .star-line .star {
+  width: 67px;
+  height: 18px;
+  background: url(../images/security-star.jpg) no-repeat;
+  position: absolute;
+  top: 0;
+}
+.security-con.con .star-line.left .line {
+  right: 0;
+}
+.security-con.con .star-line.left .star {
+  left: 0;
+}
+.security-con.con .star-line.right .line {
+  left: 0;
+}
+.security-con.con .star-line.right .star {
+  right: 0;
 }
 /* account page */
 .new-rzzt {
