--- a/css/style.less
+++ b/css/style.less
@@ -577,12 +577,12 @@ ul.nav {
 .ui-progressbar-mid {
     margin:6px auto;
     display: block;
-    width: 44px;
-    height: 44px;
-    line-height: 44px;
+    width: 46px;
+    height: 46px;
+    line-height: 46px;
     font-size: 8px;
     text-align: center;
-    background: url(../images/progressbar.png);
+    background: url(../images/progressbar.png) no-repeat;
 }
 
 .tongji dl dt {
