--- a/css/style.less
+++ b/css/style.less
@@ -361,6 +361,24 @@ input[type="submit"].btn, input[type="button"].btn {
     }
 }
 
+.btn-more {
+    width: 120px;
+    background: none;
+    margin: 0 auto;
+
+    a {
+        color: #888;
+        border: 1px solid #888;
+        border-radius: 12px;
+        padding: 3px 16px;
+        line-height: 34px;
+
+        &:hover {
+            color: #ccc;
+        }
+    }
+}
+
 /* un Authentication case */
 .un-Authentication {
     .tjcard {
