--- a/css/style.less
+++ b/css/style.less
@@ -1371,6 +1371,16 @@ body#index-body div.con {
   right:40px;
 }
 
+.security-con.con .security-s { 
+  padding-left: 40px;
+  color: #f8f8f8;
+}
+.security-con.con .security-s-2 {
+  padding-right: 40px;
+}
+.security-con.con .security-s-4 {
+  padding-right: 44px;
+}
 
 /* ZJL's style */
 .state .on {
