--- a/css/style.css
+++ b/css/style.css
@@ -2569,6 +2569,16 @@ body#index-body div.con {
 .gonggao .more {
   right: 40px;
 }
+.security-con.con .security-s {
+  padding-left: 40px;
+  color: #f8f8f8;
+}
+.security-con.con .security-s-2 {
+  padding-right: 40px;
+}
+.security-con.con .security-s-4 {
+  padding-right: 44px;
+}
 /* ZJL's style */
 .state .on {
   color: #fff;
