--- a/css/style.less
+++ b/css/style.less
@@ -1382,6 +1382,10 @@ body#index-body div.con {
   padding-right: 44px;
 }
 
+.login_layer {
+    width: 1100px;
+}
+
 /* ZJL's style */
 .state .on {
   color: #fff;
