--- a/css/style.css
+++ b/css/style.css
@@ -2579,6 +2579,9 @@ body#index-body div.con {
 .security-con.con .security-s-4 {
   padding-right: 44px;
 }
+.login_layer {
+  width: 1100px;
+}
 /* ZJL's style */
 .state .on {
   color: #fff;
