--- a/css/style.less
+++ b/css/style.less
@@ -1386,6 +1386,29 @@ body#index-body div.con {
     width: 1100px;
 }
 
+/* notice */
+.notice {
+    padding: 6px 12px;
+    position: relative;
+    background: #f4f4f4;
+
+    i {
+        background: url(../images/notice.png) no-repeat center center;
+        width: 24px;
+        height: 24px;
+        float: left;
+    }
+
+    .content {
+        float: left;
+        padding-left: 12px;
+
+        p {
+            color: #666;
+        }
+    }
+}
+
 /* ZJL's style */
 .state .on {
   color: #fff;
