--- a/css/style.less
+++ b/css/style.less
@@ -1409,6 +1409,14 @@ body#index-body div.con {
     }
 }
 
+.header {
+    //border-bottom: none;
+}
+
+.tz_tab td.xmm img {
+    margin-top: 17px;
+}
+
 /* ZJL's style */
 .state .on {
   color: #fff;
