--- a/css/style.less
+++ b/css/style.less
@@ -1178,9 +1178,9 @@ body#index-body div.con {
 }
 .borb { padding-bottom: 6px; }
 
-.sxdl dd .fit {
-    width: 60px;
-}
+// .sxdl dd .fit {
+//     width: 60px;
+// }
 
 /* security */
 
@@ -1415,6 +1415,32 @@ body#index-body div.con {
 
 .tz_tab td.xmm img {
     margin-top: 17px;
+}
+
+.logsel .yzm {
+    margin-top: 0;
+    height: 36px;
+}
+
+/* new shaixuan */
+table.sx {
+    font-size: 14px;
+
+    a {
+        padding: 3px 18px;
+        white-space: nowrap;
+        font-size: inherit;
+    }
+    
+    a.on {
+        background-color: #ffb900;
+        color: #fff;
+        border-radius: 20px;
+    }
+
+    td {
+        padding: 10px 4px 0 0;
+    }
 }
 
 /* ZJL's style */
