--- a/css/style.less
+++ b/css/style.less
@@ -257,6 +257,10 @@ input[type="submit"].btn, input[type="button"].btn {
     .tj_tzje, .tj_zqsy {
         background-position: 0 15px;
     }
+
+    .tj_tzr {
+        background-position: 0 11px;
+    }
 }
 
 /* 星标 */
@@ -1389,6 +1393,7 @@ body#index-body div.con {
 /* notice */
 .notice {
     padding: 6px 12px;
+    margin-top: 24px;
     position: relative;
     background: #f4f4f4;
 
@@ -1402,6 +1407,7 @@ body#index-body div.con {
     .content {
         float: left;
         padding-left: 12px;
+        width: 700px - 24px - 24px - 12px - 2px;
 
         p {
             color: #666;
