--- a/css/style.css
+++ b/css/style.css
@@ -1582,6 +1582,9 @@ input[type="button"].btn.big {
 .tongji .tj_zqsy {
   background-position: 0 15px;
 }
+.tongji .tj_tzr {
+  background-position: 0 11px;
+}
 /* 星标 */
 .rank {
   position: relative;
@@ -2582,6 +2585,7 @@ body#index-body div.con {
 /* notice */
 .notice {
   padding: 6px 12px;
+  margin-top: 24px;
   position: relative;
   background: #f4f4f4;
 }
@@ -2594,6 +2598,7 @@ body#index-body div.con {
 .notice .content {
   float: left;
   padding-left: 12px;
+  width: 638px;
 }
 .notice .content p {
   color: #666;
